fix search focus z-index issue (hid suggestions options)

--- a/PlexRequests.UI/Content/custom.scss
+++ b/PlexRequests.UI/Content/custom.scss
@@ -256,7 +256,7 @@ $border-radius: 10px;
 .input-group-addon .btn-group {
     position: absolute;
     right: 45px;
-    z-index: 2;
+    z-index: 3;
     top: 13px;
     box-shadow: 0 0 0;
 }
